Closing on the overview dashboard

--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="include">
-            <div id="include" class="inline" align="middle" style={{ "display: none" if number_sorted_columns else "" }}>
+            <div id="include" class="inline" align="middle">
                 <label class="inline"><input type="checkbox" name="include_running" id="include_running" {{ running_checked }} />
                     <span class="label-body">running</span>
                 </label>
