Adding Refresh button to object viewer

--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -19,9 +19,11 @@
             <pre id="json" class="container-scroll"></pre>
         </div>
         <div class="flex-bottom container-close justify-center">
-            <form class="justify-space-around">
+            <form class="justify-center">
                 <button type="button" class="action_button btn-center" onclick="window.close()">
                     <i class="fa fa-remove"></i><span>Close</span></button>
+                <button type="button" class="action_button btn-center" onclick="window.location.reload();">
+                    <i class="fa fa-refresh"></i><span>Refresh</span></button>
             </form>
         </div>
 
