--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="refresh-button">
-            <button type="submit" class="action_button btn-center" title="Refresh"><i class="fa fa-refresh"></i>
+            <button type="submit" class="action_button btn-center" title="Refresh" id="refresh_button_selector_panel"><i class="fa fa-refresh"></i>
                 <span>Refresh</span></button>
         </div>
     </div>
