--- a/synergy/mx/static/css/composite-processing-chart.css
+++ b/synergy/mx/static/css/composite-processing-chart.css
@@ -15,7 +15,7 @@ line {
     overflow-y: scroll;
 }
 
-.midnight {
+.daily-timeperiod {
     stroke: rebeccapurple;
     stroke-width: 2;
 }
@@ -38,7 +38,7 @@ div.tooltip {
     position: absolute;
     text-align: left;
     width: 180px;
-    height: 68px;
+    height: 98px;
     padding: 2px;
     font: 12px sans-serif;
     background: lightsteelblue;
